Make table scroll on overflow and force show scroll bar #76 fix #42

--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -1,5 +1,10 @@
 /* TABLE */
 
+table {
+  overflow-x: scroll;
+  display: block;
+}
+
 td {
   width: 10%;
 }
@@ -85,4 +90,14 @@ tr, td {
   text-align: center;
   position: relative;
   right: 6px;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 0px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 0px;
+  background-color: rgba(0,0,0,.5);
+  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
